# slingshot

./: .clang-tidy  .slingshot.toml  CMakeLists.txt  Justfile  README.md
.github/workflows/: build.yml  release.yml
docs/: config.md
include/slingshot/: compiler.hpp  completion.hpp  handlers.hpp  import_locator.hpp  indexing.hpp  remote_debug.hpp  slingshot.hpp
src/: compiler.cpp  completion.cpp  completion_generator.cpp  document_graph.cpp  handlers.cpp  indexing.cpp  main.cpp  remote_debug.cpp
test/: globals.cpp  indexer.cpp
